<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/logo_iv"
            android:layout_width="match_parent"
            android:layout_height="236dp"
            tools:srcCompat="@drawable/img" />

        <TextView
            android:id="@+id/Join_us_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/join_us"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Username Field -->
        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_username"
            android:hintTextColor= "@color/grey"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:padding="12dp" />

        <!-- Email/Phone Field -->
        <TextView
            android:id="@+id/emailPhoneLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_phone"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/emailPhoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_or_phone_number"
            android:hintTextColor="@color/grey"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:inputType="textEmailAddress|phone"
            android:padding="12dp" />

        <!-- Password Field -->
        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:hintTextColor="@color/grey"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:inputType="textPassword"
            android:padding="12dp" />

        <!-- Confirm Password Field -->
        <TextView
            android:id="@+id/confirmPasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_your_password"
            android:hintTextColor="@color/grey"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:inputType="textPassword"
            android:padding="12dp" />

        <!-- Terms and Conditions Checkbox -->
        <CheckBox
            android:id="@+id/termsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_agree_to_the_terms_and_conditions"
            android:textColor="@color/peacock_blue"
            android:buttonTint="@color/forest_green"
            android:padding="12dp" />

        <!-- Register Button -->
        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/forest_green"
        android:padding="16dp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/peacock_blue"
            android:backgroundTint="@android:color/transparent"
            android:padding="12dp"
            android:layout_gravity="center" />

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
