<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_whoIsPhumlaniDube"
            android:icon="@drawable/whoisicon"
            android:title="Who is Phumalani Dube? Connect with the heart of this foundation"/>

        <item
            android:id="@+id/nav_Newsletter"
            android:icon="@drawable/pictogrammers_material_email_newsletter"
            android:title="Newsletter"/>

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_app_settings_alt_24"
            android:title="@string/action_settings"/>

        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/register"
            android:title="Regisiter an account"/>

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login"
            android:title="Login in an account"/>

    </group>
</menu>