<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/logo2_iv"
                        android:layout_width="match_parent"
                        android:layout_height="236dp"
                        android:src="@drawable/pdflogo" />

                    <TextView
                        android:id="@+id/Login_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/login"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Email/Phone Field -->
            <TextView
                android:id="@+id/emailPhoneLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_phone"
                android:textColor="#000000"
                android:textSize="16sp"
                android:paddingTop="8dp" />

            <EditText
                android:id="@+id/emailPhoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email_or_phone_number"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:inputType="text"
                android:padding="12dp"
                android:background="@drawable/edittext_background"/>

            <!-- Password Field -->
            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingTop="8dp" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:inputType="text"
                android:padding="12dp"
                android:background="@drawable/edittext_background" />

            <!-- Login Button -->
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/forest_green"
                android:padding="16dp" />

            <!-- Forgot Password Button -->
            <Button
                android:id="@+id/forgotPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/forgot_your_password"
                android:textColor="@color/peacock_blue"
                android:backgroundTint="@android:color/transparent"
                android:padding="12dp"
                android:layout_gravity="center" />
            <!-- Button to send verification code -->
            <Button
                android:id="@+id/sendCodeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Send Verification Code to Phone number to reset password"
                android:textColor="@color/peacock_blue"
                android:backgroundTint="@android:color/transparent"
                android:padding="12dp"
                android:layout_gravity="center"/>


            <!-- Register Button -->
            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_register"
                android:textColor="@color/peacock_blue"
                android:backgroundTint="@android:color/transparent"
                android:padding="12dp"
                android:layout_gravity="center" />
            <EditText
                android:id="@+id/verificationCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter verification code"
                android:visibility="gone" /> <!-- Initially hidden -->

            <Button
                android:id="@+id/verifyCodeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Verify Code"
                android:visibility="gone" /> <!-- Initially hidden -->

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>